--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ build/Release
 
 # Dependency directories
 node_modules/
+apps/*/node_modules/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
@@ -88,10 +89,12 @@ web_modules/
 # Next.js build output
 .next
 out
+apps/*/out
 
 # Nuxt.js build / generate output
 .nuxt
 dist
+apps/*/dist
 
 # Gatsby files
 .cache/
