--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,17 +1,17 @@
-FROM node:20-alpine AS build
+FROM node:20-alpine AS base
 
 WORKDIR /usr/src/app
-
 ENV NODE_ENV=development
 
-COPY package.json yarn.lock ./
+COPY package.json yarn.lock .yarnrc.yml ./
+COPY .yarn ./.yarn
+COPY apps/backend/package.json apps/backend/package.json
+COPY apps/frontend/package.json apps/frontend/package.json
 
-#COPY .env .env
+RUN yarn install --immutable
 
 COPY . .
 
-RUN yarn install && yarn build
+EXPOSE 4000 5173
 
-EXPOSE 4000
-
-CMD ["yarn", "start"]
+CMD ["yarn", "workspace", "@node-crm/backend", "dev"]
