--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,5 +1,6 @@
 NODE_ENV=development
 SERVER_PORT=4000
+SERVER_BASE_ROUTE=/api/template-service
 OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:4318/v1/traces
 OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://localhost:4318/v1/metrics
 OTEL_EXPORTER_OTLP_LOGS_ENDPOINT=http://localhost:4318/v1/logs
