--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -17,6 +17,12 @@ jobs:
         with:
           node-version: 20
 
+      - name: Enable Corepack
+        run: corepack enable
+
+      - name: Use Yarn v4
+         run: corepack prepare yarn@4.10.3 --activate
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
